--- a/pom.xml
+++ b/pom.xml
@@ -150,7 +150,7 @@
 
 	</dependencies>
 	<pluginRepositories>
-		<pluginRepository>
+		<!-- <pluginRepository>
 			<id>apache.snapshots</id>
 			<name>Apache Snapshots</name>
 			<url>https://repository.apache.org/content/repositories/snapshots</url>
@@ -160,7 +160,7 @@
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
-		</pluginRepository>
+		</pluginRepository> -->
 	</pluginRepositories>
 
 </project>
