--- a/src/main/webapp/WEB-INF/patcher.config
+++ b/src/main/webapp/WEB-INF/patcher.config
@@ -1,5 +1,5 @@
 {
-	"connStr": "jdbc:mysql://140.119.19.93:3396/Patcher?user=root&password=$0$1ab&characterEncoding=utf8",
+	"connStr": "jdbc:mysql://localhost:3396/Patcher?user=root&password=ae&characterEncoding=utf8",
 	"patcherHomePath":"/media/DATA/PatcherHome",
 	"optPatchPHPVirPath":"/WEB-INF/optPatch/optPatch.php",
 	"optPatchJarVirPath":"/WEB-INF/optPatch/OptPatch.jar"
